# drone_show

./: .dockerignore  .gitignore  CATORA_INTEGRATION_SUMMARY.md  CATORA_PLANNER_GUIDE.md  Dockerfile  KEY_FILES_REFERENCE.md  Readme.md  TODO.md  WORK_LOG.md  docker-compose.yml
docs/: TRAJECTORY_SAMPLING_GUIDE.md
docs/archived/: CLEANUP_PLAN.md  OFFLINE_TRAJECTORY_PLANNING.md  QUICK_SAMPLING_GUIDE.md  README.md  TRAJECTORY_SAMPLING.md
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: README.md  README_PIPELINE.md  analyze_mission.py  assignment_25_drones_20251112_220118.txt  assignment_25_drones_20251112_220923.txt  assignment_25_drones_20251112_221443.txt  assignment_25_drones_20251112_232824.txt  assignment_36_drones_20251113_161958.txt  assignment_36_drones_20251113_162628.txt  auto_formation_pipeline.py  formation_planner_pipeline.py  formations_large.py  generate_25_assignment.py  generate_36_assignment.py  generate_assignment.py
scripts/Allocation/: README.md  __init__.py
scripts/analysis/: __init__.py  test_bspline_evaluation.py
scripts/core/: __init__.py  mission_timer.py  swarm_synchronizer.py  swarm_synchronizer_with_planning.py
scripts/planning/: AUTO_PIPELINE_GUIDE.md  __init__.py  auto_formation_pipeline.py  formations_large.py  (+1 more)
src/planner/catora_planner/: CMakeLists.txt  README.md  package.xml
src/planner/catora_planner/config/: default_params.yaml
src/planner/catora_planner/include/catora_planner/: catora.hpp  formation_reshaper.hpp  robot.hpp  robot_state.hpp  type_convertor.hpp
src/planner/catora_planner/launch/: catora_planner.launch.py  scenario_catora_25.launch.py  scenario_catora_36.launch.py
src/planner/catora_planner/msg/: Trajectory.msg
src/planner/catora_planner/scripts/: catora_assignment_calculator.py
src/planner/catora_planner/src/: catora_planner_node.cpp  formation_reshaper.cpp  formation_reshaping_nodelet.cpp  robot.cpp  robot_state.cpp  type_convertor.cpp
src/planner/catora_planner/srv/: GetAssignment.srv  GetReshapingTrajectories.srv
src/planner/dl_planner/: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  package.xml
src/planner/dl_planner/config/: default.yaml
src/planner/dl_planner/include/dl_planner/: dl_planner_node.hpp
src/planner/dl_planner/include/dl_planner/collision_checker/: swarm_collision_checker.hpp
src/planner/dl_planner/include/dl_planner/neural_network/: neural_collision_net.hpp
src/planner/dl_planner/include/dl_planner/trajectory_generator/: offline_trajectory_generator.hpp
src/planner/dl_planner/include/dl_planner/utils/: data_types.hpp  visualization.hpp
src/planner/dl_planner/launch/: dl_planner.launch.py  run_in_sim_dl.launch.py  scenario_dl.launch.py
src/planner/dl_planner/models/: README.md
src/planner/dl_planner/scripts/: visualize_trajectories.py
src/planner/dl_planner/src/: dl_planner_node.cpp
src/planner/dl_planner/src/collision_checker/: swarm_collision_checker.cpp
src/planner/dl_planner/src/neural_network/: neural_collision_net.cpp
src/planner/dl_planner/src/trajectory_generator/: offline_trajectory_generator.cpp
src/planner/headway_planner/: CMakeLists.txt  README.md  package.xml
src/planner/headway_planner/config/: default.yaml
src/planner/headway_planner/examples/: mission_10_drones.yaml  mission_50_drones.yaml
src/planner/headway_planner/include/headway_planner/: headway_planner_node.hpp
src/planner/headway_planner/include/headway_planner/altitude/: slot_allocator.hpp
src/planner/headway_planner/include/headway_planner/collision_detector/: event_extractor.hpp
src/planner/headway_planner/include/headway_planner/scheduler/: greedy_scheduler.hpp  headway_scheduler.hpp  milp_scheduler.hpp
src/planner/headway_planner/include/headway_planner/trajectory/: plan_generator.hpp
src/planner/headway_planner/include/headway_planner/utils/: data_types.hpp  geometry_utils.hpp
src/planner/headway_planner/launch/: headway_planner.launch.py  run_in_sim_headway.launch.py  scenario_headway.launch.py
src/planner/headway_planner/src/: headway_executor_node.cpp  headway_planner_node.cpp
src/planner/headway_planner/src/altitude/: slot_allocator.cpp
src/planner/headway_planner/src/collision_detector/: event_extractor.cpp
src/planner/headway_planner/src/scheduler/: greedy_scheduler.cpp  headway_scheduler.cpp  milp_scheduler.cpp
src/planner/headway_planner/src/trajectory/: plan_generator.cpp
src/planner/headway_planner/src/utils/: geometry_utils.cpp
src/planner/layer_planner/: CMakeLists.txt  package.xml
src/planner/layer_planner/config/: layer_planner_params.yaml
src/planner/layer_planner/include/layer_planner/: layer_planner_node.hpp
src/planner/layer_planner/launch/: layer_planner.launch.py  layer_planner_scenario.launch.py  layer_swarm.launch.py
src/planner/layer_planner/src/: layer_planner_node.cpp
src/planner/orca_planner/: CMakeLists.txt  README.md  package.xml
src/planner/orca_planner/config/: default.yaml
src/planner/orca_planner/include/orca_planner/: orca_planner_node.hpp
src/planner/orca_planner/include/orca_planner/orca_solver/: orca_3d.hpp
src/planner/orca_planner/include/orca_planner/spatial_hash/: spatial_hash_3d.hpp
src/planner/orca_planner/include/orca_planner/trajectory_generator/: orca_trajectory_generator.hpp
src/planner/orca_planner/include/orca_planner/utils/: visualization_utils.hpp
src/planner/orca_planner/launch/: orca_planner.launch.py  run_in_sim_orca.launch.py  scenario_orca.launch.py
src/planner/orca_planner/scripts/: visualize_orca_trajectories.py
src/planner/orca_planner/src/: orca_executor_node.cpp  orca_planner_node.cpp
src/planner/orca_planner/src/orca_solver/: orca_3d.cpp
src/planner/orca_planner/src/spatial_hash/: spatial_hash_3d.cpp
src/planner/orca_planner/src/trajectory_generator/: orca_trajectory_generator.cpp
src/planner/orca_planner/src/utils/: visualization_utils.cpp
src/planner/traj_recorder/: CMakeLists.txt  README.md  package.xml
src/planner/traj_recorder/launch/: record_trajectory.launch.py
src/planner/traj_recorder/src/: traj_recorder_node.cpp
(+933 files in other folders)
