<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orca_planner</name>
  <version>1.0.0</version>
  <description>ORCA-based offline trajectory planner for drone swarms - optimal for obstacle-free multi-agent collision avoidance</description>
  <maintainer email="ds70768@naver.com">pjh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Math and utilities -->
  <depend>eigen3</depend>

  <!-- Existing planner dependencies -->
  <depend>traj_utils</depend>
  <depend>quadrotor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
